--- a/package.json
+++ b/package.json
@@ -4,16 +4,24 @@
   "description": "Fun with React",
   "main": "index.js",
   "scripts": {
-    "start": "./node_modules/.bin/parcel index.html"
+    "start": "npx parcel index.html"
   },
   "author": "Azhar Khan",
   "license": "MIT",
   "dependencies": {
-    "babel-preset-env": "^1.6.1",
+    "babel-eslint": "^10.0.1",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "parcel-bundler": "^1.0.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "eslint": "^5.6.0",
+    "eslint-config-prettier": "^3.1.0",
+    "eslint-plugin-prettier": "^2.7.0",
+    "parcel-bundler": "^1.10.1",
+    "prettier": "^1.14.3"
   }
 }
