--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,15 +1,9 @@
 {
   "parser": "babel-eslint",
-  "extends": [
-    "eslint-recommended",
-    "prettier",
-    "prettier/react"
-  ],
+  "extends": ["eslint-recommended", "prettier", "prettier/react"],
   "parserOptions": {
     "ecmaFeatures": {
-      "jsx": true,
-      "experimentalObjectRestSpread": true,
-      "classes": true
+      "jsx": true
     },
     "sourceType": "module",
     "ecmaVersion": 2018
